--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/SettingsScreen.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/SettingsScreen.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 implements="net.vdombox.ide.common.interfaces.ISettingsScreen"
 		 height="100%"
 		 width="100%">
