--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/Toolset.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/Toolset.mxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:components="net.vdombox.ide.modules.resourceBrowser.view.components.*"
 		 implements="net.vdombox.ide.common.interfaces.IToolset"
 		 height="100%"
 		 xmlns:components1="net.vdombox.ide.modules.dataBase.view.components.*">
