--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  width="100%" minWidth="225" xmlns:view="net.vdombox.ide.common.view.*"
-					  doubleClickEnabled="true" doubleClick="mxtreeitemrenderer1_doubleClickHandler(event)"
-					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)">
+					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  width="100%" minWidth="225"
+					  doubleClickEnabled="true" doubleClick="mxtreeitemrenderer1_doubleClickHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
@@ -35,7 +33,7 @@
 				if ( data && data.name().localName == "page" )
 				{
 					if ( !contextMenu )
-						contextMenu = new ContextMenu();
+						contextMenu = createContextMenu();
 				}
 				else
 					contextMenu = null;
@@ -69,7 +67,7 @@
 					return "";
 			}
 			
-			private function dataLoaded( object : Object = null ) : void
+			private function dataLoaded() : void
 			{
 				loader = new Loader();
 				loader.contentLoaderInfo.addEventListener( Event.COMPLETE, onBytesLoaded );
@@ -101,7 +99,7 @@
 				super.validateProperties();
 				
 				if ( !_data )
-					return
+					return;
 				
 				if ( !_resourceVO ||( _resourceVO && _resourceVO.id != _data.@iconID ) )
 					dispatchEvent( new ResourceVOEvent( ResourceVOEvent.GET_RESOURCE_REQUEST));
@@ -112,22 +110,24 @@
 				// TODO Auto-generated method stub
 				dispatchEvent( new ObjectsTreePanelEvent ( ObjectsTreePanelEvent.DOUBLE_CLICK ) );
 			}
-			
-			protected function mxtreeitemrenderer1_contextMenuHandler(event:MouseEvent):void
-			{
-				if ( !data || data.name().localName != "page" )
-					return;
-				
-//				contextMenu.removeAllItems();
-				
-				var renameItem : ContextMenuItem = new ContextMenuItem( "Rename" );
-				renameItem.addEventListener( Event.SELECT, renameContextMenuHandler, false, 0, true );
-//				contextMenu.addItem( renameItem );
-				
-				var deleteItem : ContextMenuItem = new ContextMenuItem( "Delete" );
-				deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
-//				contextMenu.addItem( deleteItem );
-			}
+
+            private function createContextMenu():ContextMenu
+            {
+                if ( !data || data.name().localName != "page" )
+                    return null;
+
+                var editContextMenu:ContextMenu = new ContextMenu();
+
+                var renameItem : ContextMenuItem = new ContextMenuItem( "Rename" );
+                renameItem.addEventListener( Event.SELECT, renameContextMenuHandler, false, 0, true );
+				editContextMenu.customItems.push( renameItem );
+
+                var deleteItem : ContextMenuItem = new ContextMenuItem( "Delete" );
+                deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
+                editContextMenu.customItems.push( deleteItem );
+
+                return editContextMenu;
+            }
 			
 			private function renameContextMenuHandler( event : Event ) : void
 			{
