--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
-					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  xmlns:view="net.vdombox.view.*"
-					  xmlns:view1="net.vdombox.ide.common.view.*"
 					  xmlns:components="net.vdombox.ide.common.view.components.*"
 					  height="25"
 					  minWidth="200"
 					  contentBackgroundAlpha="0"
-					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)"
 					  keyDown="mxtreeitemrenderer1_keyDownHandler(event)">
 
 	<s:states>
@@ -54,11 +50,11 @@
 			{
 				super.data = value;
 
-				dataChanged = true
+				dataChanged = true;
 				_data = value as XML;
 
 				if ( _data )
-					createContextMenu();
+					contextMenu = createContextMenu();
 			}
 
 
@@ -105,9 +101,9 @@
 				//				componentIcon.source = null;
 
 				if ( !_data )
-					return
+					return;
 
-						_resourceID = _data.@iconID;
+				_resourceID = _data.@iconID;
 				_rendererID = _data.@id;
 
 
@@ -131,38 +127,42 @@
 					dispatchEvent( new ResourceVOEvent( ResourceVOEvent.GET_RESOURCE_REQUEST ) );
 			}
 
-			private function createContextMenu() : void
-			{
-//				_contextMenu.removeAllItems();
+            private function createContextMenu():ContextMenu
+            {
 
-				if ( _data.name().localName == "page" )
-				{
-					var startItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_start' ) );
-					startItem.addEventListener( Event.SELECT, startContextMenuHandler, false, 0, true );
-//					_contextMenu.addItem( startItem );
-				}
+                var editContextMenu:ContextMenu = new ContextMenu();
 
-				var copyItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_copy' ) );
-				copyItem.addEventListener( Event.SELECT, copyContextMenuHandler, false, 0, true );
-//				_contextMenu.addItem( copyItem );
 
-				var pasteItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_paste' ) );
-				pasteItem.addEventListener( Event.SELECT, pasteContextMenuHandler, false, 0, true );
-//				_contextMenu.addItem( pasteItem );
+                if ( _data.name().localName == "page" )
+                {
+                    var startItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_start' ) );
+                    startItem.addEventListener( Event.SELECT, startContextMenuHandler, false, 0, true );
+					editContextMenu.customItems.push( startItem );
+                }
 
-				var bufferContent : String = Clipboard.generalClipboard.getData( ClipboardFormats.TEXT_FORMAT ) as String;
+                var copyItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_copy' ) );
+                copyItem.addEventListener( Event.SELECT, copyContextMenuHandler, false, 0, true );
+				editContextMenu.customItems.push( copyItem );
 
-				if ( bufferContent && ( bufferContent.slice( 0, 13 ) != "Vlt+VDOMIDE2+" ) )
-				{
-					pasteItem.enabled = false;
-				}
+                var pasteItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_paste' ) );
+                pasteItem.addEventListener( Event.SELECT, pasteContextMenuHandler, false, 0, true );
+				editContextMenu.customItems.push( pasteItem );
 
-				var deleteItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_delete' ) );
-				deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
-//				_contextMenu.addItem( deleteItem );
-			}
+                var bufferContent : String = Clipboard.generalClipboard.getData( ClipboardFormats.TEXT_FORMAT ) as String;
 
-			private function dataLoaded( object : Object = null ) : void
+                if ( bufferContent && ( bufferContent.slice( 0, 13 ) != "Vlt+VDOMIDE2+" ) )
+                {
+                    pasteItem.enabled = false;
+                }
+
+                var deleteItem : ContextMenuItem = new ContextMenuItem( resourceManager.getString( 'Wysiwyg_General', 'contextMenu_delete' ) );
+                deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
+				editContextMenu.customItems.push( deleteItem );
+
+                return editContextMenu;
+            }
+
+			private function dataLoaded() : void
 			{
 				loader = new Loader();
 				loader.contentLoaderInfo.addEventListener( Event.COMPLETE, onBytesLoaded );
@@ -206,12 +206,6 @@
 				// 
 				if ( _data.@visible[ 0 ] )
 					_data.@visible = _eyeOpened
-			}
-
-			protected function mxtreeitemrenderer1_contextMenuHandler( event : MouseEvent ) : void
-			{
-				createContextMenu();
-//				_contextMenu.display( this.stage, event.stageX, event.stageY );
 			}
 
 			private function deleteContextMenuHandler( event : Event ) : void
