git-svn-id: http://svn.vdombox.ru/flextools/trunk@8941 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
@@ -162,7 +162,7 @@
                 return editContextMenu;
             }
 
-			private function dataLoaded() : void
+			private function dataLoaded(object : Object = null) : void
 			{
 				loader = new Loader();
 				loader.contentLoaderInfo.addEventListener( Event.COMPLETE, onBytesLoaded );
