--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
@@ -67,7 +67,7 @@
 					return "";
 			}
 			
-			private function dataLoaded() : void
+			private function dataLoaded(object : Object = null) : void
 			{
 				loader = new Loader();
 				loader.contentLoaderInfo.addEventListener( Event.COMPLETE, onBytesLoaded );
