Rejected commit: Default
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8949 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
@@ -88,7 +88,7 @@
 				currentState = "Progress";
 			}
 
-			private function queueOKHandler() : void
+			private function queueOKHandler( message : String ) : void
 			{
 				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueOKHandler );
 				currentState = "Result";
