--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -2,7 +2,6 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
-			 xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*"
 			 xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*"
 			 width="460"
 			 height="380"
@@ -79,13 +78,15 @@
 						  paddingTop="0">
 
 					<s:BorderContainer height="272"
-									   width="272">
+									   width="272"
+                                       skinClass="spark.skins.spark.BorderContainerSkin">
 
 						<s:BorderContainer height="258"
 										   width="258"
 										   x="7"
 										   y="7"
-										   backgroundColor="#000000">
+										   backgroundColor="#000000"
+                                           skinClass="spark.skins.spark.BorderContainerSkin">
 
 							<attributeRenderers:ColorPickerCanvas id="ccc"
 																  height="256"
@@ -337,7 +338,8 @@
 									 maxChars="6"
 									 restrict="a-fA-F0-9"
 									 text=""
-									 width="80"/>
+									 width="80"
+                                     skinClass="spark.skins.spark.TextInputSkin"/>
 					</s:HGroup>
 				</s:VGroup>
 			</s:HGroup>
